# LightningTree

./: AbstractTree.cpp  AbstractTree.h  CMakeLists.txt  ExternalField.cpp  ExternalField.h  IOTree.h  LTBuilder.cpp  LTBuilder.h  LightningTree.cpp  LightningTree.h  LightningTree.txt  Vector.cpp  Vector.h  Vertex.h  WormTree.cpp  WormTree.h  config.h  grafics.py  graph.ipynb  graphics.py  main.cpp  readme.md  test.cpp
Archive/: plotly_graph.py
LightningTree_data/: Q_history.txt  edge_table.txt  phi_info.txt  q_history_1.txt  vertex_table.txt
src/: Config.h  Constants.h  Edge.h  ExternalField.h  LTBuilder.cpp  LTBuilder.h  Vector.h  Vertex.h  config.h
src/AbstractTree/: AbstractTree.cpp  AbstractTree.h
src/LightningTree/: LightningTree.cpp  LightningTree.h  MaxPotentialEdge.h  RandomEdgeIterator.h
src/TestTree/: TestTree.h
src/WormTree/: WormTree.cpp  WormTree.h
